add the rest of the team

--- a/team.htm
+++ b/team.htm
@@ -62,19 +62,19 @@
 							</th>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="img/firefly-bluray.webp">
+									<a href="">
+										<img class=fill src="img/andrew.webp">
 									</a>
 								</div>
 							</th>
 						</tr>
 						<tr>
 							<th class=small-th> Owen Ketels </th>
-							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Andrew (Euan didn't tell me his surname) </th>
 						</tr>
 						<tr>
 							<td> Control Lead </td>
-							<td> Team Leader <br> Aerodynamic Lead </td>
+							<td> Euan didn't tell me what he does either </td>
 						</tr>
 					</table>
 				</td>
@@ -83,26 +83,26 @@
 						<tr>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="img/firefly-bluray.webp">
+									<a href="">
+										<img class=fill src="img/euan.webp">
 									</a>
 								</div>
 							</th>
 							<th>
 								<div class="member-container yellow-halfbox">
-									<a href="https://en.wikipedia.org/wiki/Firefly_(TV_series)">
-										<img class=fill src="img/firefly-bluray.webp">
+									<a href="">
+										<img class=fill src="img/maxwell.webp">
 									</a>
 								</div>
 							</th>
 						</tr>
 						<tr>
-							<th class=small-th> Firefly DVD </th>
-							<th class=small-th> Firefly DVD </th>
+							<th class=small-th> Euan Grant </th>
+							<th class=small-th> Max McCellan </th>
 						</tr>
 						<tr>
-							<td> Brand Manager </td>
-							<td> Team Leader <br> Aerodynamic Lead </td>
+							<td> Brand Manager (?) </td>
+							<td> Euan didn't tell me what he does </td>
 						</tr>
 					</table>
 				</td>
