--- a/team.htm
+++ b/team.htm
@@ -70,11 +70,11 @@
 						</tr>
 						<tr>
 							<th class=small-th> Owen Ketels </th>
-							<th class=small-th> Andrew (Euan didn't tell me his surname) </th>
+							<th class=small-th> Andrew Bishop </th>
 						</tr>
 						<tr>
 							<td> Control Lead </td>
-							<td> Euan didn't tell me what he does either </td>
+							<td> Chief Engineer </td>
 						</tr>
 					</table>
 				</td>
@@ -84,25 +84,25 @@
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="">
-										<img class=fill src="img/euan.webp">
+										<img class=fill src="img/maxwell.webp">
 									</a>
 								</div>
 							</th>
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="">
-										<img class=fill src="img/maxwell.webp">
+										<img class=fill src="img/euan.webp">
 									</a>
 								</div>
 							</th>
 						</tr>
 						<tr>
-							<th class=small-th> Euan Grant </th>
 							<th class=small-th> Max McCellan </th>
+							<th class=small-th> Euan Grant </th>
 						</tr>
 						<tr>
-							<td> Brand Manager (?) </td>
-							<td> Euan didn't tell me what he does </td>
+							<td> Team Leader, <br> Aero-structure Lead </td>
+							<td> Brand Manager </td>
 						</tr>
 					</table>
 				</td>
