--- a/team.htm
+++ b/team.htm
@@ -41,7 +41,7 @@
 							</th>
 						</tr>
 						<tr>
-							<th class=small-th> Aryaman Verna </th>
+							<th class=small-th> Aryaman Verma </th>
 							<th class=small-th> Oscar Lowe </th>
 						</tr>
 						<tr>
