--- a/team.htm
+++ b/team.htm
@@ -63,18 +63,18 @@
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="">
-										<img class=fill src="img/andrew.webp">
+										<img class=fill src="img/sam.webp">
 									</a>
 								</div>
 							</th>
 						</tr>
 						<tr>
 							<th class=small-th> Owen Ketels </th>
-							<th class=small-th> Andrew Bishop </th>
+							<th class=small-th> Sam McKeating </th>
 						</tr>
 						<tr>
 							<td> Control Lead </td>
-							<td> Chief Engineer </td>
+							<td> Production Head </td>
 						</tr>
 					</table>
 				</td>
