--- a/team.htm
+++ b/team.htm
@@ -74,7 +74,7 @@
 						</tr>
 						<tr>
 							<td> Control Lead </td>
-							<td> Production Head </td>
+							<td> Human Diagnostics Lead </td>
 						</tr>
 					</table>
 				</td>
