--- a/team.htm
+++ b/team.htm
@@ -27,7 +27,7 @@
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="">
-										<img class=fill src="img/aryaman.webp">
+										<img class=fill src="img/headshot_alex_mp.webp">
 									</a>
 									</a>
 								</div>
@@ -41,11 +41,11 @@
 							</th>
 						</tr>
 						<tr>
-							<th class=small-th> Aryaman Verma </th>
+							<th class=small-th> Alex MP </th>
 							<th class=small-th> Oscar Lowe </th>
 						</tr>
 						<tr>
-							<td> Human Diagnostics Lead, <br> Coach </td>
+							<td> Social Coordinator, <br> Team Development </td>
 							<td> Propulsion Lead </td>
 						</tr>
 					</table>
