--- a/team.htm
+++ b/team.htm
@@ -35,14 +35,14 @@
 							<th>
 								<div class="member-container yellow-halfbox">
 									<a href="">
-										<img class=fill src="img/oscar.webp">
+										<img class=fill src="img/Callum.webp">
 									</a>
 								</div>
 							</th>
 						</tr>
 						<tr>
 							<th class=small-th> Alex MP </th>
-							<th class=small-th> Oscar Lowe </th>
+							<th class=small-th> Callum Walker </th>
 						</tr>
 						<tr>
 							<td> Social Coordinator, <br> Team Development </td>
