--- a/team.htm
+++ b/team.htm
@@ -73,7 +73,7 @@
 							<th class=small-th> Sam McKeating </th>
 						</tr>
 						<tr>
-							<td> Control Lead </td>
+							<td> Treasurer </td>
 							<td> Human Diagnostics Lead </td>
 						</tr>
 					</table>
