--- a/team.htm
+++ b/team.htm
@@ -41,7 +41,7 @@
 							</th>
 						</tr>
 						<tr>
-							<th class=small-th> Alex MP </th>
+							<th class=small-th> Alex McDougall-Page </th>
 							<th class=small-th> Callum Walker </th>
 						</tr>
 						<tr>
